--- a/app/index.html
+++ b/app/index.html
@@ -78,7 +78,7 @@
         <div id="buttons-box">
             <button id="button-left" class="text-clickable button button-display-none" onclick="left_button_action()"></button>
             <div id="between-buttons"></div>
-            <button id="button-right" class="text-clickable button button-display-none" onclick="right_button_action()"></button>
+            <button id="button-right" class="text-clickable button button-display-none" onclick="right_button_action()" disabled></button>
         </div>
     </div>
     <div id="progress-bar">
