--- a/app/app-13.html
+++ b/app/app-13.html
@@ -2,9 +2,9 @@
     <ul class="choices-box">
         <form class="input-drop-down-form" id="department-form" action="" >
             <div class="input-box input-drop-down-box">
-                <label id="department-input-label" for="department-input" class="text-label input-label">N° de Département</label>
-                <select name="department-input" id="department-input" class="text-clickable input input-drop-down" onchange="input_validation(this); update_app(this)">
-                    <option class="input-drop-down-choice text-clickable" value="0">&nbsp;&nbsp;veuilliez selecionner un choix</option>
+                <label id="department-input-label" for="department-input" class="text-label input-label input-label-required">N° de Département<span class="required-asterisk">*</span></label>
+                <select name="department-input" id="department-input" class="text-clickable input input-drop-down" required onchange="input_validation_drop_down(this); update_app(this)">
+                    <option class="input-drop-down-choice text-clickable" value="" selected>&nbsp;&nbsp;veuilliez selecionner un choix</option>
                     <option class="input-drop-down-choice text-clickable" value="01-paris">&nbsp;&nbsp;01 - paris</option>
                     <option class="input-drop-down-choice text-clickable" value="02-paris">&nbsp;&nbsp;02 - paris</option>
                     <option class="input-drop-down-choice text-clickable" value="03-paris">&nbsp;&nbsp;03 - paris</option>
