--- a/app/app-18.html
+++ b/app/app-18.html
@@ -2,9 +2,9 @@
     <ul class="choices-box">
         <form class="input-drop-down-form" id="facture-form" action="" >
             <div class="input-box input-drop-down-box">
-                <label id="facture-input-label" for="facture-input" class="text-label input-label">Montant de la facture d'électricité</label>
-                <select name="facture-input" id="facture-input" class="text-clickable input input-drop-down" onchange="input_validation(this); update_app(this)">
-                    <option class="input-drop-down-choice text-clickable" value="0">&nbsp;&nbsp;veuilliez selecionner un choix</option>
+                <label id="facture-input-label" for="facture-input" class="text-label input-label input-label-required">Montant de la facture d'électricité<span class="required-asterisk">*</span></label>
+                <select name="facture-input" id="facture-input" class="text-clickable input input-drop-down" required onchange="input_validation_drop_down(this); update_app(this)">
+                    <option class="input-drop-down-choice text-clickable" value="" selected>&nbsp;&nbsp;veuilliez selecionner un choix</option>
                     <option class="input-drop-down-choice text-clickable" value="inferieur-700">&nbsp;&nbsp;inférieur à 700€</option>
                     <option class="input-drop-down-choice text-clickable" value="entre-700-1500">&nbsp;&nbsp;entre 700€ et 1500€</option>
                     <option class="input-drop-down-choice text-clickable" value="entre-1500-2000">&nbsp;&nbsp;entre 1500€ et 2000€</option>
