--- a/app/app-24.html
+++ b/app/app-24.html
@@ -4,9 +4,9 @@
             <div class="input-box input-increment-box">
                 <label id="enfants-garde-input-label" for="enfants-garde-input" class="text-label input-label">Nombre d'enfants</label>
                 <div class="input-increment-container">
-                    <span class="input-increment-arrow input-increment-arrow-left" onclick="increment_value(-1); update_app(document.getElementsByClassName('input')[0]); input_validation(document.getElementsByClassName('input')[0])"></span>
-                    <input type="number" name="enfants-garde-input" id="enfants-garde-input" class="text-input input input-increment" value="0" step="1" min="0" oninput="input_validation(this); update_app(this); update_arrows(this)">
-                    <span class="input-increment-arrow input-increment-arrow-right input-increment-arrow-active" onclick="increment_value(1); update_app(document.getElementsByClassName('input')[0]); input_validation(document.getElementsByClassName('input')[0])"></span>
+                    <span class="input-increment-arrow input-increment-arrow-left" onclick="increment_value(-1); update_app(document.getElementsByClassName('input')[0])"></span>
+                    <input type="number" name="enfants-garde-input" id="enfants-garde-input" class="text-input input input-increment" value="0" step="1" min="0" pattern="^[0-9]\d*$" oninput="update_app(this); update_arrows(this)">
+                    <span class="input-increment-arrow input-increment-arrow-right input-increment-arrow-active" onclick="increment_value(1); update_app(document.getElementsByClassName('input')[0])"></span>
                 </div>
             </div>
         </form>
