--- a/app/app-26.html
+++ b/app/app-26.html
@@ -2,9 +2,9 @@
     <ul class="choices-box">
         <form class="input-drop-down-form" id="revenues-form" action="" >
             <div class="input-box input-drop-down-box">
-                <label id="revenues-input-label" for="revenues-input" class="text-label input-label">Revenues fiscaux</label>
-                <select name="revenues-input" id="revenues-input" class="text-clickable input input-drop-down" onchange="input_validation(this); update_app(this)">
-                    <option class="input-drop-down-choice text-clickable" value="0">&nbsp;&nbsp;veuilliez selecionner un choix</option>
+                <label id="revenues-input-label" for="revenues-input" class="text-label input-label input-label-required">Revenues fiscaux<span class="required-asterisk">*</span></label>
+                <select name="revenues-input" id="revenues-input" class="text-clickable input input-drop-down" required onchange="input_validation_drop_down(this); update_app(this)">
+                    <option class="input-drop-down-choice text-clickable" value="" selected>&nbsp;&nbsp;veuilliez selecionner un choix</option>
                     <option class="input-drop-down-choice text-clickable" value="inferieur-a">&nbsp;&nbsp;inférieurs à A</option>
                     <option class="input-drop-down-choice text-clickable" value="entre-a-b">&nbsp;&nbsp;entre A et B</option>
                     <option class="input-drop-down-choice text-clickable" value="entre-b-c">&nbsp;&nbsp;entre B et C</option>
