--- a/app/app-28.html
+++ b/app/app-28.html
@@ -3,23 +3,23 @@
         <form class="input-multiple-form" id="information-form" action="">
             <div class="input-box input-text-box">
                 <label id="user-name-input-label" for="user-name-input" class="text-label input-label input-label-required">Votre nom complet<span class="required-asterisk">*</span></label>
-                <input type="text" name="nom" id="user-name-input" class="text-input input input-text" placeholder="Nom Prénom" oninput="input_validation(this); update_app(this)">
+                <input type="text" name="nom" id="user-name-input" class="text-input input input-text" placeholder="Nom Prénom" required oninput="update_app(this)">
                 <p id="user-name-input-hint" class="text-input-hint input-hint">Ce champs est requis.</p>
             </div>
             <div class="input-box input-email-box">
                 <label id="user-email-input-label" for="user-email-input" class="text-label input-label input-label-required">Votre email<span class="required-asterisk">*</span></label>
-                <input type="email" name="email" id="user-email-input" class="text-input input input-email" placeholder="exemple@exemple.com" onchange="input_validation(this); update_app(this)">
+                <input type="email" name="email" id="user-email-input" class="text-input input input-email" placeholder="exemple@exemple.com" pattern="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$" required onchange="update_app(this)">
                 <p id="user-email-input-hint" class="text-input-hint input-hint">Entrer une adresse électronique valide.</p>
             </div>
             <div class="input-box input-number-box">
                 <label id="user-phone-input-label" for="user-phone-input" class="text-label input-label input-label-required">Votre numéro de téléphone<span class="required-asterisk">*</span></label>
-                <input type="number" name="telephone" id="user-phone-input" class="text-input input input-phone" placeholder="0033xxxxxxxxx ou 0xxxxxxxxx" onchange="input_validation(this); update_app(this)">
-                <p id="user-phone-input-hint" class="text-input-hint input-hint">Entrer un numéro de téléphone valide.</p>
+                <input type="text" name="telephone" id="user-phone-input" class="text-input input input-phone" placeholder="+33xxxxxxxxx" pattern="^((\+)33|0)[1-9](\d{2}){4}$" required onchange="update_app(this)">
+                <p id="user-phone-input-hint" class="text-input-hint input-hint">Entrer un numéro de téléphone valide (+33xxxxxxxxx).</p>
             </div>
             <div class="input-box input-check-box">
-                <input type="checkbox" name="user-check-input" id="user-check-input" class="text-input input input-check" oninput="update_app(this)">
+                <input type="checkbox" name="user-check-input" id="user-check-input" class="text-input input input-check" required oninput="input_validation_check_box(this); update_app(this)">
                 <span class="check-box-custom"></span>
-                <label id="user-check-input-label" for="user-check-input" class="text-label input-label">J'ai lu et j'accepte <a class="text-hyperlink" href="#" target="_blank">la politique de confidentialité</a></label>
+                <label id="user-check-input-label" for="user-check-input" class="text-label input-label">J'ai lu et j'accepte <a class="text-hyperlink" href="#" target="_blank">la politique de confidentialité</a><span class="required-asterisk">*</span></label>
             </div>
         </form>
     </ul>
