--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         <form class="input-email-form" id="newsletter-form" action="">
             <div id="email-input-box" class="input-box">
                 <label id="newsletter-email-input-label" for="newsletter-email-input" class="text-label input-label">Email</label>
-                <input type="email" name="newsletter-email-input" id="newsletter-email-input" class="text-input input input-email" placeholder="Entrer votre email" onchange="input_validation(this)">
+                <input type="email" name="newsletter-email-input" id="newsletter-email-input" class="text-input input input-email" placeholder="Entrer votre email" pattern="^([a-zA-Z0-9_\-\.]+)@([a-zA-Z0-9_\-\.]+)\.([a-zA-Z]{2,5})$">
                 <p id="newsletter-email-input-hint" class="text-input-hint input-hint">Entrer une adresse electronique valide</p>
             </div>
             <div id="email-submit-box"><input type="submit" id="newsletter-email-submit" value="S'inscrire" class="text-button button button-primary-special-private" tabindex="0" aria-label="s'inscrire"></div>
