--- a/app/index.html
+++ b/app/index.html
@@ -90,4 +90,5 @@
 <script src="../scripts/input.js"></script>
 <script src="../scripts/pop-up.js"></script>
 <script src="../scripts/cancel-app.js"></script>
+<script src="../scripts/close-app.js"></script>
 </html>
