home page update

--- a/app/app-17.html
+++ b/app/app-17.html
@@ -3,7 +3,7 @@
         <form class="input-drop-down-form" id="surface-toit-form" action="" >
             <div class="input-drop-down-box input-box">
                 <label id="surface-toit-input-label" for="surface-toit-input" class="text-label input-label input-label-required">Surface Disponible<span class="required-asterisk">*</span></label>
-                <select name="surface-toit-input" id="surface-toit-input" class="text-clickable input input-drop-down" required onchange="input_validation_drop_down(this); update_app(this)">
+                <select name="surface-toit-input" id="surface-toit-input" class="text-clickable input input-drop-down" required onchange="update_app(this)">
                     <option class="input-drop-down-choice text-clickable" value="" selected>&nbsp;&nbsp;veuilliez selecionner un choix</option>
                     <option class="input-drop-down-choice text-clickable" value="15m²">&nbsp;&nbsp;15m²</option>
                     <option class="input-drop-down-choice text-clickable" value="20m²">&nbsp;&nbsp;20m²</option>
