--- a/index.html
+++ b/index.html
@@ -97,25 +97,27 @@
 <section id="values-intro-section" class="page-section" tabindex="0">
     <div id="content-box-values-intro" class="content-box-page-section">
         <h2 id="values-intro-title" class="text-big-header section-title">Vivez dans la maison que vous méritez avec Meeco.</h2>
+        <img id="values-intro-house" src="images/visuals/maison.svg" alt="introduction illustration maison"/>
+        <img id="values-intro-circle" src="images/visuals/circle.svg" alt="introduction illustration cercle"/>
     </div>
 </section>
 <section id="values-section" class="page-section" tabindex="0">
     <div id="content-box-values" class="content-box-page-section">
         <ul id="values-list">
             <li class="values-list-item">
-                <img src="images/visuals/economie-illustration.svg" alt="économie-illustration"/>
-                <h3 class="values-list-item-title text-small-header">Economisez votre consommation d'énergie</h3>
-                <p class="values-list-item-description text-small-body">Votre maison sera moins énergivore avec les produits de renovation énergitique.</p>
+                <img src="images/visuals/economie-illustration.svg" class="card-image" alt="économie-illustration"/>
+                <h3 class="values-list-item-title text-card-title">Economisez votre consommation d'énergie</h3>
+                <p class="values-list-item-description text-card-body">Votre maison sera moins énergivore avec les produits de renovation énergitique.</p>
             </li>
             <li class="values-list-item">
-                <img src="images/visuals/ecologie-illustration.svg" alt="écologie-illustration"/>
-                <h3 class="values-list-item-title text-small-header">Habitez dans un milieu plus écologique</h3>
-                <p class="values-list-item-description text-small-body">Votre maison sera moins énergivore avec les produits de renovation énergitique.</p>
+                <img src="images/visuals/ecologie-illustration.svg" class="card-image" alt="écologie-illustration"/>
+                <h3 class="values-list-item-title text-card-title">Habitez dans un milieu plus écologique</h3>
+                <p class="values-list-item-description text-card-body">Votre maison sera moins énergivore avec les produits de renovation énergitique.</p>
             </li>
             <li class="values-list-item">
-                <img src="images/visuals/confort-illustration.svg" alt="confort-illustration"/>
-                <h3 class="values-list-item-title text-small-header">Assurez une vie pleine de confort dans votre maison</h3>
-                <p class="values-list-item-description text-small-body">Votre maison sera moins énergivore avec les produits de renovation énergitique.</p>
+                <img src="images/visuals/confort-illustration.svg" class="card-image" alt="confort-illustration"/>
+                <h3 class="values-list-item-title text-card-title">Assurez une vie pleine de confort dans votre maison</h3>
+                <p class="values-list-item-description text-card-body">Votre maison sera moins énergivore avec les produits de renovation énergitique.</p>
             </li>
         </ul>
     </div>
@@ -125,21 +127,21 @@
         <h2 id="services-section-title" class="text-big-header section-title">Nous vous proposons des travaux de renovation énergetique de qualité.</h2>
         <ul id="services-section-list">
             <li class="services-section-list-item">
-                <img src="images/visuals/isolation-illustration.svg" alt="isolation-illustration"/>
-                <h3 class="services-section-list-item-title text-small-header">Isolation thermique</h3>
-                <p class="services-section-list-item-description text-small-body">Votre maison sera moins énergivore avec nos produits.</p>
-                <a href="./isolation/" class="services-section-list-item-link text-clickable button button-primary-normal-public aria-label="En savoir plus" tabindex="0";>En savoir plus</a>
+                <img src="images/visuals/isolation-illustration.svg" class="card-image" alt="isolation-illustration"/>
+                <h3 class="services-section-list-item-title text-card-title">Isolation thermique</h3>
+                <p class="services-section-list-item-description text-card-body">Votre maison sera moins énergivore avec nos produits.</p>
+                <a href="./isolation/" class="services-section-list-item-link text-clickable button button-primary-normal-public" aria-label="En savoir plus" tabindex="0";>En savoir plus</a>
             </li>
             <li class="services-section-list-item">
-                <img src="images/visuals/chauffage-illustration.svg" alt="chauffage-illustration"/>
-                <h3 class="services-section-list-item-title text-small-header">Chauffage</h3>
-                <p class="services-section-list-item-description text-small-body">Votre maison sera moins énergivore avec nos produits.</p>
+                <img src="images/visuals/chauffage-illustration.svg" class="card-image" alt="chauffage-illustration"/>
+                <h3 class="services-section-list-item-title text-card-title">Chauffage</h3>
+                <p class="services-section-list-item-description text-card-body">Votre maison sera moins énergivore avec nos produits.</p>
                 <a href="./chauffage/" class="services-section-list-item-link text-clickable button button-primary-normal-public" aria-label="En savoir plus" tabindex="0">En savoir plus</a>
             </li>
             <li class="services-section-list-item">
-                <img src="images/visuals/electricite-illustration.svg" alt="énergie-illustration"/>
-                <h3 class="services-section-list-item-title text-small-header">Energie solaire</h3>
-                <p class="services-section-list-item-description text-small-body">Votre maison sera moins énergivore avec nos produits.</p>
+                <img src="images/visuals/electricite-illustration.svg" class="card-image" alt="énergie-illustration"/>
+                <h3 class="services-section-list-item-title text-card-title">Energie solaire</h3>
+                <p class="services-section-list-item-description text-card-body">Votre maison sera moins énergivore avec nos produits.</p>
                 <a href="./energie/" class="services-section-list-item-link text-clickable button button-primary-normal-public" aria-label="En savoir plus" tabindex="0">En savoir plus</a>
             </li>
         </ul>
