--- a/app/app-27.html
+++ b/app/app-27.html
@@ -3,7 +3,7 @@
         <form class="input-drop-down-form" id="code-postal-form" action="" >
             <div class="input-box input-drop-down-box">
                 <label id="code-postal-input-label" for="code-postal-input" class="text-label input-label input-label-required">Code postal<span class="required-asterisk">*</span></label>
-                <select name="code-postal-input" id="code-postal-input" class="text-clickable input input-drop-down" required onchange="input_validation_drop_down(this); update_app(this)">
+                <select name="code-postal-input" id="code-postal-input" class="text-clickable input input-drop-down" required onchange="update_app(this)">
                     <option class="input-drop-down-choice text-clickable" value="" selected>&nbsp;&nbsp;veuilliez selecionner un choix</option>
                     <option class="input-drop-down-choice text-clickable" value="0001">&nbsp;&nbsp;0001</option>
                     <option class="input-drop-down-choice text-clickable" value="0002">&nbsp;&nbsp;0002</option>
