(*newsletter 830) overflow scroll faq

--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
                     }
                 }
                 window.onresize = set_answers_height;
+                set_answers_height();
             </script>
         </div>
     </div>
