--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="../css/buttons.css">
     <link rel="stylesheet" href="../css/input.css">
     <link rel="stylesheet" href="../css/app-main.css">
+    <link rel="stylesheet" href="../css/app-main(860).css">
+    <link rel="stylesheet" href="../css/app-main(portrait).css">
 </head>
 <body>
 <nav id="navigation-bar" class="navigation-bar">
