--- a/app/app-24.html
+++ b/app/app-24.html
@@ -2,11 +2,11 @@
     <ul class="choices-box">
         <form class="input-increment-form" id="enfants-garde-form" action="">
             <div class="input-box input-increment-box">
-                <label id="enfants-garde-input-label" for="enfants-garde-input" class="text-label input-label">Nombre d'enfants</label>
+                <label id="enfants-garde-input-label" for="enfants-garde-input" class="text-label input-label">Nombre d'enfants<span class="required-asterisk">*</span></label>
                 <div class="input-increment-container">
-                    <span class="input-increment-arrow input-increment-arrow-left" onclick="increment_value(-1); update_app(document.getElementsByClassName('input')[0])"></span>
-                    <input type="number" name="enfants-garde-input" id="enfants-garde-input" class="text-input input input-increment" value="0" step="1" min="0" pattern="^[0-9]\d*$" oninput="update_app(this); update_arrows(this)">
-                    <span class="input-increment-arrow input-increment-arrow-right input-increment-arrow-active" onclick="increment_value(1); update_app(document.getElementsByClassName('input')[0])"></span>
+                    <span class="input-increment-arrow input-increment-arrow-left" onclick="increment_value(-1); update_app(document.getElementsByClassName('input')[0]); update_arrows(document.getElementsByClassName('input')[0])"></span>
+                    <input type="number" name="enfants-garde-input" id="enfants-garde-input" class="text-input input input-increment" value="0" step="1" min="0" pattern="^[0-9]\d*$" oninput="update_app(this); update_arrows(this)" required>
+                    <span class="input-increment-arrow input-increment-arrow-right input-increment-arrow-active" onclick="increment_value(1); update_app(document.getElementsByClassName('input')[0]); update_arrows(document.getElementsByClassName('input')[0])"></span>
                 </div>
             </div>
         </form>
