--- a/app/app-26.html
+++ b/app/app-26.html
@@ -4,7 +4,7 @@
             <div class="input-box input-drop-down-box">
                 <label id="revenues-input-label" for="revenues-input" class="text-label input-label input-label-required">Revenues fiscaux<span class="required-asterisk">*</span></label>
                 <select name="revenues-input" id="revenues-input" class="text-clickable input input-drop-down" required onchange="update_app(this)">
-                    <option class="input-drop-down-choice text-clickable" value="" selected>&nbsp;&nbsp;veuilliez selecionner un choix</option>
+                    <option class="input-drop-down-choice text-clickable" value="" selected>&nbsp;&nbsp;Selectionner un choix</option>
                     <option class="input-drop-down-choice text-clickable" value="inferieur-a">&nbsp;&nbsp;inférieurs à A</option>
                     <option class="input-drop-down-choice text-clickable" value="entre-a-b">&nbsp;&nbsp;entre A et B</option>
                     <option class="input-drop-down-choice text-clickable" value="entre-b-c">&nbsp;&nbsp;entre B et C</option>
