--- a/app/app-28.html
+++ b/app/app-28.html
@@ -12,7 +12,7 @@
                 <p id="user-email-input-hint" class="text-input-hint input-hint">Entrer une adresse électronique valide.</p>
             </div>
             <div class="input-box input-number-box">
-                <label id="user-phone-input-label" for="user-phone-input" class="text-label input-label input-label-required">Votre numéro de téléphone<span class="required-asterisk">*</span></label>
+                <label id="user-phone-input-label" for="user-phone-input" class="text-label input-label input-label-required">Votre N° de téléphone<span class="required-asterisk">*</span></label>
                 <input type="text" name="telephone" id="user-phone-input" class="text-input input input-phone" placeholder="+33xxxxxxxxx" pattern="^((\+)33|0)[1-9](\d{2}){4}$" required onchange="update_app(this)">
                 <p id="user-phone-input-hint" class="text-input-hint input-hint">Entrer un numéro de téléphone valide (+33xxxxxxxxx).</p>
             </div>
