contact time choices update

--- a/app/app-29.html
+++ b/app/app-29.html
@@ -11,10 +11,15 @@
                 <label id="contact-time-input-label" for="contact-time-input" class="text-label input-label">Durée de la journée</label>
                 <select name="duree" id="contact-time-input" class="text-clickable input input-drop-down" onchange="update_app(this)">
                     <option class="input-drop-down-choice text-clickable" value="" selected>&nbsp;&nbsp;Selectionner un choix</option>
-                    <option class="input-drop-down-choice text-clickable" value="09:00-10:00">&nbsp;&nbsp;09:00 - 10:00</option>
-                    <option class="input-drop-down-choice text-clickable" value="10:00-11:00">&nbsp;&nbsp;10:00 - 11:00</option>
-                    <option class="input-drop-down-choice text-clickable" value="11:00-12:00">&nbsp;&nbsp;11:00 - 12:00</option>
-                    <option class="input-drop-down-choice text-clickable" value="12:00-13:00">&nbsp;&nbsp;12:00 - 13:00</option>
+                    <option class="input-drop-down-choice text-clickable" value="09:00 - 10:00">&nbsp;&nbsp;09:00 - 10:00</option>
+                    <option class="input-drop-down-choice text-clickable" value="10:00 - 11:00">&nbsp;&nbsp;10:00 - 11:00</option>
+                    <option class="input-drop-down-choice text-clickable" value="11:00 - 12:00">&nbsp;&nbsp;11:00 - 12:00</option>
+                    <option class="input-drop-down-choice text-clickable" value="12:00 - 13:00">&nbsp;&nbsp;12:00 - 13:00</option>
+                    <option class="input-drop-down-choice text-clickable" value="13:00 - 14:00">&nbsp;&nbsp;13:00 - 14:00</option>
+                    <option class="input-drop-down-choice text-clickable" value="14:00 - 15:00">&nbsp;&nbsp;14:00 - 15:00</option>
+                    <option class="input-drop-down-choice text-clickable" value="15:00 - 16:00">&nbsp;&nbsp;15:00 - 16:00</option>
+                    <option class="input-drop-down-choice text-clickable" value="16:00 - 17:00">&nbsp;&nbsp;16:00 - 17:00</option>
+                    <option class="input-drop-down-choice text-clickable" value="17:00 - 18:00">&nbsp;&nbsp;17:00 - 18:00</option>
                 </select>
             </div>
         </form>
